--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarText">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Whitepaper</a>
+            <a class="nav-link" href="https://docs.blacksale.site/about-us/roadmap">Whitepaper</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#prize">Prize</a>
